# agent-sdk-security

./: .gitignore  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
book/: index.html  llms.txt  robots.txt  sitemap.xml
book/assets/: book.js
book/chapters/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  ch11.html  ch12.html  ch13.html  ch14.html  ch15.html  ch16.html  ch17.html  ch18.html  ch19.html  ch20.html
challenges/: conftest.py
challenges/ch01/: challenge.py  test_ch01.py
challenges/ch02/: challenge.py  test_ch02.py
challenges/ch03/: challenge.py  test_ch03.py
challenges/ch04/: challenge.py  test_ch04.py
challenges/ch05/: challenge.py  test_ch05.py
challenges/ch06/: challenge.py  test_ch06.py
challenges/ch07/: challenge.py  test_ch07.py
challenges/ch08/: challenge.py  test_ch08.py
challenges/ch09/: challenge.py  test_ch09.py
challenges/ch10/: challenge.py  test_ch10.py
challenges/ch11/: challenge.py  test_ch11.py
challenges/ch12/: challenge.py  test_ch12.py
challenges/ch13/: challenge.py  test_ch13.py
challenges/ch14/: challenge.py  test_ch14.py
challenges/ch16/: challenge.py  test_ch16.py
challenges/ch17/: challenge.py  test_ch17.py
challenges/ch18/: challenge.py  test_ch18.py
notes/: research.md
solutions/: ch01.py  ch02.py  ch03.py  ch04.py  ch05.py  ch06.py  ch07.py  ch08.py  ch09.py  ch10.py  ch11.py  ch12.py  ch13.py  ch14.py  ch16.py  ch17.py  ch18.py  ch19.py  ch20.py
(+49 files in other folders)
