[project]
name = "agent-sdk-security-course"
version = "0.1.0"
description = "Securing Claude Agent SDK deployments — a hands-on course on permissions, isolation, and network control"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.112",
    "requests>=2.32",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.32",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["challenges"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Challenge skeletons intentionally raise NotImplementedError as their only
# body and leave imported names/locals unused until a learner fills them in.
"challenges/*/challenge.py" = ["F401", "F841", "ARG001"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
# Challenge skeletons are intentionally incomplete (raise NotImplementedError)
# until a learner fills them in, so checking them isn't meaningful — and
# every challenges/chNN/challenge.py shares the same module name with no
# __init__.py, which mypy refuses to scan together anyway.
exclude = ["^challenges/"]

[tool.uv]
package = false
